fix commented code